# nvstat

./: .gitignore  Makefile  README.md  meson.build  nv.c  nvstat.vala
vapi/: libx11-6.vapi  libxnvctrl.vapi  libxnvctrl0.vapi  x11.vapi
